# Test23_MakeSimpleScreen

./: .gitignore  CMakeLists.txt  sdkconfig.defaults
Test24_CollectAndDisplay/: .gitignore  README.md
Test24_CollectAndDisplay/esp32_firmware/: CMakeLists.txt
Test24_CollectAndDisplay/pc_collector/: collector.py  requirements.txt
Test24_CollectAndDisplay/pc_collector/config/: plc_config.json  variables.json
Test24_CollectAndDisplay/pc_collector/historian/: README.txt
main/: CMakeLists.txt  Kconfig.projbuild  main.c  mqtt_handler.c  mqtt_handler.h  ui.c  ui.h  wifi_credentials.h.example  wifi_creds.h.example  wifi_manager.c  wifi_manager.h
